provide an input for the post url and the post auth key
as an mvp, this will just post whatever is hit as content, and send it with
whatever was received from the last response. The post service needs to prefer
the local id, but the service uid to facilitate this.

Alternately, the client could only send the id instead of both.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Record</title>
 </head>
 <body>
+    <label for="post_url">POST URL:</label><input type="text" name="post_url" />
+    <label for="post_key">POST KEY:</label><input type="text" name="post_key" />
     <textarea></textarea>
 </body>
 </html>
