--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Record</title>
+    <script defer src="index.js"></script>
 </head>
 <body>
     <label for="post_url">POST URL:</label><input type="text" name="post_url" />
