provide a means to update metadata for a post
this allows passing flags like publish=true, publication dates, or expiration
dates.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <body>
         <label for="post_url">POST URL:</label><input type="text" name="post_url" />
         <label for="post_key">POST KEY:</label><input type="text" name="post_key" />
+        <label for="metadata">METADATA:</label><input type="text" name="metadata" />
         <textarea></textarea>
     </body>
 </html>
