provide a main and nav section
the nav might be better listed as an aside--and it should probably be below the
main element usually, but in this case, SEO won't apply to the main panel but
to the nav.

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,12 @@
     <script defer src="index.js"></script>
 </head>
     <body>
-        <label for="post_url">POST URL:</label><input type="text" name="post_url" />
-        <label for="post_key">POST KEY:</label><input type="text" name="post_key" />
-        <label for="metadata">METADATA:</label><input type="text" name="metadata" />
-        <textarea></textarea>
+        <nav></nav>
+        <main>
+            <label for="post_url">POST URL:</label><input type="text" name="post_url" />
+            <label for="post_key">POST KEY:</label><input type="text" name="post_key" />
+            <label for="metadata">METADATA:</label><input type="text" name="metadata" />
+            <textarea></textarea>
+        </main>
     </body>
 </html>
